--- a/Cargo.toml
+++ b/Cargo.toml
@@ -74,3 +74,5 @@ alloy-rpc-types-engine = { git = "https://github.com/alloy-rs/alloy", version = 
 alloy-rpc-types-eth = { git = "https://github.com/alloy-rs/alloy", version = "0.2" }
 alloy-signer-local = { git = "https://github.com/alloy-rs/alloy", version = "0.2" }
 curl = "0.4.46"
+tokio-websockets = "0.9.0"
+futures-util = "0.3.30"
