--- a/crates/rbuilder/Cargo.toml
+++ b/crates/rbuilder/Cargo.toml
@@ -122,6 +122,9 @@ mockall = "0.12.1"
 shellexpand = "3.1.0"
 async-trait = "0.1.80"
 curl.workspace = true
+tokio-websockets = { version = "*", default-features = false, features = ["client", "server", "fastrand", "sha1_smol"] }
+futures-util = "0.3.30"
+tokio-tungstenite = "0.23.1"
 
 [build-dependencies]
 built = { version = "0.7.1", features = ["git2", "chrono"] }
